--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+torch==2.3.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu
 flask
 torch
 transformers
 Pillow
-gunicorn==20.1.0
+gunicorn
