--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-torch==2.3.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch
 flask
 torch
 transformers
